force-app/main/default/objects/SVMXC__SPM_Mean_Time_To_Complete__c/SVMXC__SPM_Mean_Time_To_Complete__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to capture the Mean Time To Complete the work order details.</description>
    <label>SPM - Mean Time To Complete</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Mean Time To Complete</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>