force-app/main/default/objects/SVMXC__SPM_Mean_Time_To_Complete__c/fields/SVMXC__Service_Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Delivered_On__c</fullName>
    <label>Service Delivered On</label>
    <type>Date</type>
</CustomField>