force-app/main/default/objects/SVMXC__SPM_Mean_Time_To_Complete__c/fields/SVMXC__Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
    <type>Lookup</type>
</CustomField>